dealing with  the exception of send email, when account password does not match

--- a/src/resources/qqmail_help.html
+++ b/src/resources/qqmail_help.html
@@ -3,41 +3,41 @@
     <title>发单小工具帮助</title>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 </head>
-<body>
-    <h1>授权码问题</h1>
-    <p>
-        1. 当使用QQ企业邮箱时，邮箱密码就是授权码
-    </p>
-    <br>
-    <p>
-        2. 当使用QQ邮箱时，授权码在邮箱设置界面获取。获取如下：
-    </p>
-    <br>
-    <img src="qqmail_1.png"/>
-    <br>
-    <br>
-    <img src="qqmail_2.png"/>
-    <br>
-<h1>已发送邮件在收件箱内看不到的问题</h1>
-        <p>
-        1. 当使用QQ企业邮箱时，设置如下
-    </p>
-        <br>
-    <img src="qqmail_4.png"/>
-    <br>
-    <br>
-    <img src="qqmail_3.png"/>
-    <br>
-    <br>
-    <br>
-    <p>
-        2. 当使用QQ邮箱时，设置如下：
-    </p>
-    <br>
-    <img src="qqmail_5.png"/>
-    <br>
-    <br>
-    <img src="qqmail_6.png"/>
-    <br>
+<body style="background-color: #edf4f6;">
+    <div id="bd" style="">
+    <div id ="main" style="margin:0 auto;width: 1000px;height: auto;">
+    <div style="float:left;overflow-x: :hidden;width: 100%; background-color: #fff; padding-left: 20px; padding-right: 20px; display: block; border: 1px solid #e8eff1; position: relative;">
+    <h1 style="margin: 27px 0 15px;font-size: 20px;color: #555;">授权码问题</h1>
+    <div style="color: #777;min-height: 250px;word-break: break-word;">
+        <p>1. 当使用QQ企业邮箱时，邮箱密码就是授权码。</p>
+        <p>2. 当使用QQ邮箱时，授权码在邮箱设置界面获取。获取如下：</p>
+        <p><a href="qqmail_1.png">
+            <img src="qqmail_1.png" style="display: block;margin: auto;" />
+        </a></p>
+        <p><a href="qqmail_2.png">
+            <img src="qqmail_2.png" style="display: block;margin: auto;" />
+        </a></p>
+    </div>
+    <h1 style="margin: 27px 0 15px;font-size: 20px;color: #555;">已发送邮件在收件箱内看不到的问题</h1>
+    <div style="color: #777;min-height: 250px;word-break: break-word;">
+        <p>1. 当使用QQ企业邮箱时，设置如下：</p>
+        <p><a href="qqmail_4.png">
+            <img src="qqmail_4.png" style="display: block;margin: auto;"/>
+        </a></p>
+        <p><a href="qqmail_3.png">
+            <img src="qqmail_3.png" style="display: block;margin: auto;"/>
+        </a></p>
+    
+        <p>2. 当使用QQ邮箱时，设置如下：</p>
+        <p><a href="qqmail_5.png">
+            <img src="qqmail_5.png" style="display: block;margin: auto;" />
+        </a></p>
+        <p><a href="qqmail_6.png">
+            <img src="qqmail_6.png" style="display: block;margin: auto;" />
+        </a></p>
+    </div>
+    </div>
+    </div>
+    </div>
 </body>
 </html>
